Piccole modifiche alla sezione contatti

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello!</h2>
-						<p>You can write us an e-mail at: <a href="mailto:dnt.prod9702@gmail.com">dnt.prod9702@gmail.com</a></p>
-						<p>Don't forget to visit our <a href="https://www.youtube.com/@DnT_Prod">YouTube channel</a>!</p>
+						<p>You can write to us at our <a href="mailto:dnt.prod9702@gmail.com">e-mail address</a></p>
+						<p>Don't forget to visit our <a href="https://www.youtube.com/@DnT_Prod">YouTube channel</a></p>
 					</header>
 				</div>
 			</section>
